add 'and' rule; create extended info even when satellite is flat

--- a/project/explanation_01.ipynb
+++ b/project/explanation_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -26,18 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/utils.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
-      "importing Jupyter notebook from /Users/YK/mt/project/aux/preparation.ipynb\n"
+      "importing Jupyter notebook from preparation.ipynb\n"
      ]
     }
    ],
@@ -47,12 +43,12 @@
     "from aux import nlp\n",
     "from aux import relation_extraction\n",
     "from aux import defs\n",
-    "from aux import preparation"
+    "import preparation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -111,8 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ItMakesParseResult = collections.namedtuple(\n",
@@ -251,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -295,7 +293,10 @@
     "        if info is None:\n",
     "            utils.print_if_verbose(\"Extended info preparation wasn't successful.\", verbose)\n",
     "            return None\n",
-    "\n",
+    "        \n",
+    "        if info.satellite_info.relation is None:\n",
+    "            return None\n",
+    "        \n",
     "        nucleus_tokens = utils.lowercase_and_tokenize(\n",
     "            info.nucleus_preparation_result.prepared_text\n",
     "        )\n",
@@ -364,7 +365,7 @@
     "            processed_sn_text = nlp.remove_leading_words(augmented_sn_text, verbose)\n",
     "            prepared_sn_text = utils.lowercase_first_letter(\n",
     "                processed_sn_text if processed_sn_text is not None \n",
-    "                    else info.sn_text\n",
+    "                    else info.satellite_preparation_result.prepared_text\n",
     "            )\n",
     "            \n",
     "            statement_text = f\"{prepared_nucleus_text} because {prepared_sn_text}\"\n",
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -399,9 +400,10 @@
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the right.\n",
       "Nuclei proximity is NucleusProximity.FAR\n",
-      "The depth of the satellite's nucleus <= 3.\n",
       "Satellite's left subsegment is not nucleus.\n",
       "Will use the whole segment.\n",
+      "Text extracted from the satellite:\n",
+      "It makes me feel great to do something for the environment.\n",
       "Satellite's nucleus text: \n",
       "It makes me feel great to do something for the environment.\n",
       "Satellite:\n",
@@ -461,6 +463,15 @@
     "    print(\"\\nRESULT:\")\n",
     "    print(json.dumps(statement._asdict(), indent=2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
