--- a/project/explanation_02.ipynb
+++ b/project/explanation_02.ipynb
@@ -136,7 +136,10 @@
     "        if info is None:\n",
     "            utils.print_if_verbose(\"Extended info preparation wasn't successful.\", verbose)\n",
     "            return None\n",
-    "\n",
+    "        \n",
+    "        if info.satellite_info.relation is None:\n",
+    "            return None\n",
+    "        \n",
     "        _, ss_segment = info.satellite_info.relation.get_satellite()\n",
     "        if ss_segment is not None:\n",
     "            if (\n",
@@ -276,7 +279,7 @@
     "            )\n",
     "            prepared_sn_text = utils.lowercase_first_letter(\n",
     "                processed_sn_text if processed_sn_text is not None \n",
-    "                    else info.sn_text\n",
+    "                    else info.satellite_preparation_result.prepared_text\n",
     "            )\n",
     "            statement_text = f\"{prepared_nucleus_text}. That is why {prepared_sn_text}\"\n",
     "            return defs.Statement(\n",
@@ -295,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -309,9 +312,10 @@
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
       "Nuclei proximity is NucleusProximity.NEAR\n",
-      "The depth of the satellite's nucleus <= 3.\n",
       "Satellite's (left) nucleus contains '.', '!', '?', or ';'.\n",
       "Will use the whole segment.\n",
+      "Text extracted from the satellite:\n",
+      "It does n't matter how cool your uniform is ( or is not ).  If you are not confident, nobody will notice how great you look!\n",
       "Nucleus doesn't start with quotes.\n",
       "Nucleus relation type: '-'.\n",
       "Satellite relation type: 'Elaboration'.\n",
