--- a/project/explanation_03.ipynb
+++ b/project/explanation_03.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -98,6 +98,9 @@
     "        info = preparation.Preprocessor.prepare_extended_info(text, relation, verbose)\n",
     "        if info is None:\n",
     "            utils.print_if_verbose(\"Extended info preparation wasn't successful.\", verbose)\n",
+    "            return None\n",
+    "        \n",
+    "        if info.satellite_info.relation is None:\n",
     "            return None\n",
     "        \n",
     "        reason = None\n",
@@ -209,8 +212,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -286,7 +291,6 @@
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
       "Nuclei proximity is NucleusProximity.NEAR\n",
-      "The depth of the satellite's nucleus <= 3.\n",
       "Parsing result:\n",
       "(ROOT\n",
       "  (S\n",
@@ -342,6 +346,8 @@
       "22   VP      1   13      2\n",
       "Satellite's (left) nucleus doesn't contain '.', '!', '?', or ';'. Satellite's right subsegment starts 'and' and its verb belongs to the same subject.\n",
       "Will use only sub-nucleus.\n",
+      "Text extracted from the satellite:\n",
+      "I saw Beijing, of course,\n",
       "Nucleus' subject is 'I'.\n",
       "The subject of satellite's nucleus is 'I'.\n",
       "Nucleus and satellite's nucleus have the same subject.\n",
@@ -397,15 +403,6 @@
     "    if statement is not None:\n",
     "        print(json.dumps(statement._asdict(), indent=2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
