--- a/project/explanation_04.ipynb
+++ b/project/explanation_04.ipynb
@@ -25,13 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/utils.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/nlp.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/relation_extraction.ipynb\n",
+      "importing Jupyter notebook from /Users/YK/mt/project/aux/defs.ipynb\n",
       "importing Jupyter notebook from preparation.ipynb\n"
      ]
     }
@@ -47,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -89,6 +93,9 @@
     "        info = preparation.Preprocessor.prepare_extended_info(text, relation, verbose)\n",
     "        if info is None:\n",
     "            utils.print_if_verbose(\"Extended info preparation wasn't successful.\", verbose)\n",
+    "            return None\n",
+    "        \n",
+    "        if info.satellite_info.relation is None:\n",
     "            return None\n",
     "        \n",
     "        utils.print_if_verbose(\n",
@@ -133,7 +140,7 @@
     "            )\n",
     "            prepared_sn_text = utils.lowercase_first_letter(\n",
     "                processed_sn_text if processed_sn_text is not None \n",
-    "                    else info.sn_text\n",
+    "                    else info.satellite_preparation_result.prepared_text\n",
     "            )\n",
     "            statement_text = f\"{prepared_nucleus_text}. In fact, {prepared_sn_text}\"\n",
     "            return defs.Statement(\n",
@@ -152,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -168,7 +175,6 @@
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
       "Nuclei proximity is NucleusProximity.NEAR\n",
-      "The depth of the satellite's nucleus <= 3.\n",
       "Parsing result:\n",
       "(ROOT\n",
       "  (S\n",
@@ -232,6 +238,8 @@
       "Index: []\n",
       "Satellite's (left) nucleus doesn't contain '.', '!', '?', or ';' but none of the other two conditions is met.\n",
       "Will use the whole segment.\n",
+      "Text extracted from the satellite:\n",
+      "In 2004, Typhoon Yunna killed 164 people in Zhejiang, and 24 people were missing.\n",
       "Nucleus relation type: '-'.\n",
       "Satellite relation type: 'Joint'.\n",
       "Common pattern ( -Joint).\n",
