--- a/project/preparation.ipynb
+++ b/project/preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -15,18 +15,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import nltk.tokenize"
+    "import nltk.tokenize\n",
+    "\n",
+    "import import_ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aux import nlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -71,6 +82,7 @@
     "class NucleusProximity(enum.Enum):\n",
     "    NEAR = \"near\"\n",
     "    FAR = \"far\"\n",
+    "    NA = \"n/a\"\n",
     "    \n",
     "    \n",
     "class RelationInfo:\n",
@@ -102,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -190,7 +202,7 @@
     "                            case = TextExtractor.Case.NO_STOP_IN_N_OTHER\n",
     "                    else:\n",
     "                        left_subsegment = relation_part_info.relation.left\n",
-    "                        if belong_to_one_vp(\n",
+    "                        if nlp.belong_to_one_vp(\n",
     "                            text, \n",
     "                            left_subsegment.start, \n",
     "                            left_subsegment.end, \n",
@@ -227,8 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "PreparationResult = collections.namedtuple(\n",
@@ -287,7 +301,7 @@
     "            return 0\n",
     "\n",
     "    def ends_with_a_punctuation_mark(text, segment_type, verbose):\n",
-    "        if text[-1:] in {\".\", \"!\", \"?\", \";\"}:\n",
+    "        if text[-1:] in {\".\", \"!\", \"?\", \";\", '\"', \"'\"}:\n",
     "            return True\n",
     "        else:\n",
     "            print_if_verbose(\n",
@@ -351,7 +365,10 @@
     "            print_if_verbose(\n",
     "                f\"Satellite doesn't have any nested relations.\"\n",
     "            )\n",
-    "            return None\n",
+    "            sn_relation, sn_segment = None, None\n",
+    "            nucleus_proximity = None\n",
+    "            used_search = False\n",
+    "            cleaned_s_text = None # will apply TextExtractor to the whole satellite below\n",
     "        else:\n",
     "            sn_relation, sn_segment = satellite_info.relation.get_first_nucleus()\n",
     "            \n",
@@ -385,41 +402,52 @@
     "                    satellite_info.direction,\n",
     "                    verbose\n",
     "                )\n",
-    "                cleaned_s_text = clean(s_text)       \n",
+    "                cleaned_s_text = clean(s_text) \n",
     "            else:\n",
-    "                print_if_verbose(\n",
-    "                    f\"The depth of the satellite's nucleus <= {Preprocessor.MAX_DEPTH}.\",\n",
-    "                    verbose\n",
-    "                )\n",
-    "                used_search = False\n",
-    "                s_text_rextraction_result, used_subnucleus = TextExtractor.extract_text(\n",
-    "                    text, satellite_info, verbose\n",
-    "                )\n",
-    "                extraction_case = s_text_rextraction_result.case\n",
-    "                s_text = s_text_rextraction_result.extracted_text\n",
-    "                cleaned_s_text = clean(s_text)       \n",
-    "                if (\n",
-    "                    not used_subnucleus\n",
-    "                        and not Preprocessor.ends_with_a_punctuation_mark(\n",
-    "                                    cleaned_s_text, \"Satellite\", verbose\n",
-    "                                )\n",
-    "                ):\n",
-    "                    return None\n",
+    "                cleaned_s_text = None # will apply TextExtractor \n",
+    "                                      # to the whole satellite below\n",
     "            \n",
-    "            if Preprocessor.is_empty(cleaned_s_text, \"Satellite\", verbose):\n",
-    "                return None\n",
+    "        if cleaned_s_text is None:\n",
+    "            used_search = False\n",
+    "            s_text_extraction_result, used_subnucleus = TextExtractor.extract_text(\n",
+    "                text, satellite_info, verbose\n",
+    "            )\n",
+    "            extraction_case = s_text_extraction_result.case\n",
+    "            s_text = s_text_extraction_result.extracted_text\n",
+    "            cleaned_s_text = clean(s_text)       \n",
+    "            if (\n",
+    "                not used_subnucleus\n",
+    "                    and not Preprocessor.ends_with_a_punctuation_mark(\n",
+    "                                cleaned_s_text, \"Satellite\", verbose\n",
+    "                            )\n",
+    "            ):\n",
+    "                cleaned_s_text_ok = False\n",
     "            else:\n",
-    "                return Preprocessor.SatelliteHandlingResult(\n",
-    "                    PreparationResult(\n",
-    "                        used_search=used_search,\n",
-    "                        extraction_case=extraction_case,\n",
-    "                        prepared_text=cleaned_s_text\n",
-    "                    ),\n",
-    "                    sn_relation,\n",
-    "                    sn_segment,\n",
-    "                    nucleus_proximity\n",
-    "                )\n",
-    "        \n",
+    "                cleaned_s_text_ok = True\n",
+    "        else:\n",
+    "            cleaned_s_text_ok = True\n",
+    "            \n",
+    "        print_if_verbose(\n",
+    "            f\"Text extracted from the satellite:\\n{cleaned_s_text}\",\n",
+    "            verbose\n",
+    "        )\n",
+    "        if (\n",
+    "            not cleaned_s_text_ok \n",
+    "                or Preprocessor.is_empty(cleaned_s_text, \"Satellite\", verbose)\n",
+    "        ):\n",
+    "            return None\n",
+    "        else:\n",
+    "            return Preprocessor.SatelliteHandlingResult(\n",
+    "                PreparationResult(\n",
+    "                    used_search=used_search,\n",
+    "                    extraction_case=extraction_case,\n",
+    "                    prepared_text=cleaned_s_text\n",
+    "                ),\n",
+    "                sn_relation,\n",
+    "                sn_segment,\n",
+    "                nucleus_proximity\n",
+    "            )\n",
+    "\n",
     "    def prepare_extended_info(text, relation, verbose=False):\n",
     "        rel_info = get_info(relation, verbose)\n",
     "\n",
@@ -441,13 +469,14 @@
     "                    nucleus_proximity=satellite_handling_result.nucleus_proximity,\n",
     "                    sn_relation=satellite_handling_result.sn_relation,\n",
     "                    sn_segment=satellite_handling_result.sn_segment,\n",
-    "                    satellite_preparation_result=satellite_handling_result.preparation_result\n",
+    "                    satellite_preparation_result=\\\n",
+    "                        satellite_handling_result.preparation_result\n",
     "                )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +552,6 @@
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the left.\n",
       "Nuclei proximity is NucleusProximity.NEAR\n",
-      "The depth of the satellite's nucleus <= 3.\n",
       "Parsing result:\n",
       "(ROOT\n",
       "  (S\n",
@@ -582,21 +610,24 @@
       "24   VP      2   14      2\n",
       "Satellite's (left) nucleus doesn't contain '.', '!', '?', or ';'. Satellite's right subsegment starts 'and' and its verb belongs to the same subject.\n",
       "Will use only sub-nucleus.\n",
+      "Text extracted from the satellite:\n",
+      "I saw Beijing, of course,\n",
       "Nucleus is on the left.\n",
       "Nucleus's depth <= 3.\n",
       "Nucleus's left subsegment is not nucleus.\n",
       "Will use the whole segment.\n",
       "Satellite's nucleus is on the right.\n",
       "Nuclei proximity is NucleusProximity.FAR\n",
-      "The depth of the satellite's nucleus <= 3.\n",
       "Satellite's left subsegment is not nucleus.\n",
-      "Will use the whole segment.\n"
+      "Will use the whole segment.\n",
+      "Text extracted from the satellite:\n",
+      "The professor had said that they could bring any book or note they wanted.\n"
      ]
     }
    ],
    "source": [
-    "# %run relation_extraction.ipynb\n",
-    "# %run nlp.ipynb\n",
+    "# %run aux/relation_extraction.ipynb\n",
+    "# %run aux/nlp.ipynb\n",
     "\n",
     "# text, relations = read_relations(\"\"\"\n",
     "#     (Explanation[N][S]\n",
@@ -634,15 +665,6 @@
     "#         == TextExtractor.Case.LEFT_SUBSEGMENT_NOT_N\n",
     "# )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
