--- a/project/aux/nlp.ipynb
+++ b/project/aux/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,12 +27,12 @@
    },
    "outputs": [],
    "source": [
-    "nlp = StanfordCoreNLP('http://localhost:9001')"
+    "stanford_nlp = StanfordCoreNLP('http://localhost:9001')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -152,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def get_resolved_subjects(text, nlp=nlp):\n",
-    "    result = nlp.annotate(\n",
+    "def get_resolved_subjects(text, stanford_nlp=stanford_nlp):\n",
+    "    result = stanford_nlp.annotate(\n",
     "        text,\n",
     "        properties={\n",
     "           'annotators': 'parse,coref',\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -197,7 +197,7 @@
    "source": [
     "def test__get_resolved_subjects():\n",
     "    text = \"This movie was actually neither that funny, nor super witty. The movie was meh. I liked watching that movie. If I had a choice, I would not watch that movie again.\"\n",
-    "    assert get_resolved_subjects(text, nlp) == [\"This movie\", \"This movie\", \"I\", \"I\"]\n",
+    "    assert get_resolved_subjects(text, stanford_nlp) == [\"This movie\", \"This movie\", \"I\", \"I\"]\n",
     "    \n",
     "\n",
     "test__get_resolved_subjects()"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +276,7 @@
     "\n",
     "\n",
     "def remove_leading_words(text, verbose=False):\n",
-    "    result = nlp.annotate(\n",
+    "    result = stanford_nlp.annotate(\n",
     "        text,\n",
     "        properties={\n",
     "           'annotators': 'parse',\n",
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -377,14 +377,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def print_parse_trees(text):\n",
-    "    result = nlp.annotate(\n",
+    "    result = stanford_nlp.annotate(\n",
     "        text,\n",
     "        properties={\n",
     "           'annotators': 'parse',\n",
@@ -401,8 +401,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# -- Code for checking if the verbs of the parts of a relation belong to the same subject\n",
@@ -420,9 +422,19 @@
     "\n",
     "\n",
     "def count_tokens(text, st, end):\n",
-    "    return len(\n",
-    "        nltk.tokenize.word_tokenize(text[st:end])\n",
+    "    result = stanford_nlp.annotate(\n",
+    "        text[st:end],\n",
+    "        properties={\n",
+    "           'annotators': 'tokenize',\n",
+    "           'outputFormat': 'json',\n",
+    "           'timeout': 60000,\n",
+    "        }\n",
     "    )\n",
+    "    return len(result[\"tokens\"])\n",
+    "# def count_tokens(text, st, end):\n",
+    "#     return len(\n",
+    "#         nltk.tokenize.word_tokenize(text[st:end])\n",
+    "#     )\n",
     "\n",
     "\n",
     "def find_boundaries(text, left_st, left_end, right_st, right_end, verbose=False):\n",
@@ -474,7 +486,7 @@
     "\n",
     "def belong_to_one_vp(text, left_st, left_end, right_st, right_end, verbose=False):\n",
     "    st, _ = move_st(text, left_st, 0)\n",
-    "    result = nlp.annotate(\n",
+    "    result = stanford_nlp.annotate(\n",
     "        text[st:],\n",
     "        properties={\n",
     "           'annotators': 'parse',\n",
