extract the whole sentence from the main nucleus

--- a/project/topic_comment.ipynb
+++ b/project/topic_comment.ipynb
@@ -13,13 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from nltk.tokenize import word_tokenize, sent_tokenize\n",
+    "import nltk.tokenize\n",
     "from nltk.stem.snowball import SnowballStemmer"
    ]
   },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,15 @@
     "                    end += 1\n",
     "            st += 1\n",
     "        return None\n",
+    "    \n",
+    "    def get_first_sentence_with_question(text):\n",
+    "        sentences = nltk.sent_tokenize(text)\n",
+    "        wh_words = set(preparation.wh_words)\n",
+    "        for sentence in sentences:\n",
+    "            sent_tokens = set([t.lower() for t in nltk.word_tokenize(sentence)])\n",
+    "            if len(wh_words.intersection(sent_tokens)) > 0 and \"?\" in sent_tokens:\n",
+    "                return utils.fix_spacing(sentence[:(sentence.index(\"?\") + 1)])\n",
+    "        return None\n",
     "\n",
     "    def generate_statement(self, text, relation, main_nucleus_text, verbose=False):\n",
     "        assert(relation is not None and relation.type == \"Topic-Comment\")\n",
@@ -110,7 +119,9 @@
     "            reason = self.reasons[\"S_HAS_WH_WORD_AND_?\"]\n",
     "            statement_text = cleaned_s\n",
     "        else:\n",
-    "            statement_text = RuleTopicComment01.get_first_question(main_nucleus_text)\n",
+    "            statement_text = RuleTopicComment01.get_first_sentence_with_question(\n",
+    "                main_nucleus_text\n",
+    "            )\n",
     "            if statement_text is not None:\n",
     "                reason = self.reasons[\"QUESTION_IN_MAIN_N\"]\n",
     "\n",
@@ -151,12 +162,39 @@
     "    )\n",
     "    \n",
     "    \n",
-    "test__get_first_question()"
+    "def test__RuleTopicComment01_get_first_sentence_with_question():\n",
+    "    assert (\n",
+    "        RuleTopicComment01.get_first_sentence_with_question(\n",
+    "            \"Bla-bla-bla. Tell me what your favourite colour is! bla\"\n",
+    "        ) == None\n",
+    "    )\n",
+    "    \n",
+    "    assert (\n",
+    "        RuleTopicComment01.get_first_sentence_with_question(\n",
+    "            \"Bla-bla-bla. What is your favourite colour? bla\"\n",
+    "        ) == \"What is your favourite colour?\"        \n",
+    "    )\n",
+    "    \n",
+    "    assert (\n",
+    "        RuleTopicComment01.get_first_sentence_with_question(\n",
+    "            \"Bla-bla-bla. Yellow is her favourite colour. bla\"\n",
+    "        ) is None        \n",
+    "    )\n",
+    "    \n",
+    "    assert (\n",
+    "        RuleTopicComment01.get_first_sentence_with_question(\n",
+    "            \"Bla-bla-bla. Yellow is her favourite colour. bla\"\n",
+    "        ) is None        \n",
+    "    )\n",
+    "    \n",
+    "    \n",
+    "test__RuleTopicComment01_get_first_question()\n",
+    "test__RuleTopicComment01_get_first_sentence_with_question()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -303,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +363,7 @@
       "\n",
       "RESULT:\n",
       "{\n",
-      "  \"statement_text\": \"why you are so clever?\",\n",
+      "  \"statement_text\": \"Can you tell me why you are so clever?\",\n",
       "  \"nucleus\": null,\n",
       "  \"satellite_nucleus\": null,\n",
       "  \"left_boundary\": null,\n",
