--- a/project/aux/utils.ipynb
+++ b/project/aux/utils.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -184,6 +184,21 @@
     "        return string\n",
     "    else:\n",
     "        return string[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fix_spacing(string):\n",
+    "    if len(string) > 0 and string[-1] in punctuation:\n",
+    "        return string[:-1].strip() + string[-1]\n",
+    "    else:\n",
+    "        return string"
    ]
   },
   {
